adding  Navbar  with css

--- a/b12a.html
+++ b/b12a.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SunShine</title>
+    <link rel="stylesheet" href="b12a.css">
 </head>
 <body>
-    
+     <!-- Navbar -->
+  <nav class="navbar">
+    <a href="#" class="logo">SunShine</a>
+    <a href="#" class="signup-btn">Sign Up</a>
+  </nav>
+
 </body>
 </html>
