adding  banner with css

--- a/b12a.html
+++ b/b12a.html
@@ -12,6 +12,12 @@
     <a href="#" class="logo">SunShine</a>
     <a href="#" class="signup-btn">Sign Up</a>
   </nav>
+   <!-- Banner -->
+  <section class="banner">
+    <h1>Cool Dark UI Template for Webflow Agencies!</h1>
+    <a href="#" class="focus-btn">Stay Focused</a>
+  </section>
+
 
 </body>
 </html>
