--- a/b12a.html
+++ b/b12a.html
@@ -17,6 +17,18 @@
     <h1>Cool Dark UI Template for Webflow Agencies!</h1>
     <a href="#" class="focus-btn">Stay Focused</a>
   </section>
+   <!-- Action Section -->
+  <section class="action">
+    <div class="text">
+      <h2>See It in Action</h2>
+      <p>Explore the live preview and imagine your brand in this bold new look.</p>
+      <a href="#" class="launch-btn">Launch Live Preview</a>
+    </div>
+    <div class="image">
+      <img src="image/wc-mini.png" alt="Preview">
+    </div>
+  </section>
+
 
 
 </body>
