--- a/b12a.html
+++ b/b12a.html
@@ -28,6 +28,24 @@
       <img src="image/wc-mini.png" alt="Preview">
     </div>
   </section>
+   <!-- Productive Users -->
+  <section class="stats-section">
+    <h2>Joined Thousands of Productive Users</h2>
+    <div class="stats">
+      <div class="stat-item">
+        <h3>50K</h3>
+        <p>Active Users</p>
+      </div>
+      <div class="stat-item">
+        <h3>2M+</h3>
+        <p>Focus Sessions</p>
+      </div>
+      <div class="stat-item">
+        <h3>95%</h3>
+        <p>Satisfaction Rate</p>
+      </div>
+    </div>
+  </section>
 
 
 
