--- a/b12a.html
+++ b/b12a.html
@@ -46,6 +46,49 @@
       </div>
     </div>
   </section>
+   <!-- Users' Feedback -->
+  
+  <section class="feedback-section">
+    <h2>What our users say</h2>
+    <div class="feedback-cards">
+      <div class="feedback-card">
+        <div class="stars">★★★★★</div>
+        <h3>Loved by Designers</h3>
+        <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+        <div class="reviewer">
+          <img src="image/avatar.png" alt="Reviewer">
+          <div class="reviewer-info">
+            <strong>Reviewer name</strong>
+            Date : 09-02-2024
+          </div>
+        </div>
+      </div>
+      <div class="feedback-card">
+        <div class="stars">★★★★★</div>
+        <h3>Loved by Designers</h3>
+        <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+        <div class="reviewer">
+          <img src="image/avatar.png" alt="Reviewer">
+          <div class="reviewer-info">
+            <strong>Reviewer name</strong>
+            Date : 15-07-2024
+          </div>
+        </div>
+      </div>
+      <div class="feedback-card">
+        <div class="stars">★★★★★</div>
+        <h3>Loved by Designers</h3>
+        <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+        <div class="reviewer">
+          <img src="image/avatar.png" alt="Reviewer">
+          <div class="reviewer-info">
+            <strong>Reviewer name</strong>
+            Date : 04-03-2025
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
 
