adding  Get in touch with css

--- a/b12a.html
+++ b/b12a.html
@@ -89,6 +89,26 @@
       </div>
     </div>
   </section>
+  <!-- Get In Touch -->
+  <section class="contact-section">
+    <div class="contact-left">
+      <h2>Let’s Get in <br>Touch</h2>
+    </div>
+    <div class="contact-right">
+      <form class="contact-form">
+        <label for="email">Email</label>
+        <input type="email" id="email" placeholder="example@email.com">
+
+        <label for="name">Name</label>
+        <input type="text" id="name" placeholder="full name">
+
+        <label for="message">Message</label>
+        <textarea id="message" rows="4" placeholder="write your message...."></textarea>
+
+        <button type="submit">Get in Touch</button>
+      </form>
+    </div>
+  </section>
 
 
 
