--- a/b12a.html
+++ b/b12a.html
@@ -109,6 +109,17 @@
       </form>
     </div>
   </section>
+   <!-- Footer -->
+  <footer>
+    <h3>SunShine</h3>
+    <p>Ready to elevate your online presence? Contact us today to discuss <br> project and discover how we can bring your vision to life.</p>
+    <nav>
+      <a href="#">Home</a>     
+      <a href="#">About</a>     
+      <a href="#">How it works</a>
+      <a href="#">Services</a>
+    </nav>
+  </footer>
 
 
 
