--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SunShine</title>
-    <link rel="stylesheet" href="b12a.css">
+    <link rel="stylesheet" href="B12A/style.css">
 </head>
 <body>
      <!-- Navbar -->
